--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Fredoka:wght@500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Fredoka:wght@500&family=Pacifico&display=swap"
       rel="stylesheet"
     />
 
