--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
       rel="stylesheet"
     />
 
-    <title>Business Consultant</title>
+    <title>Michael Faraday | Business Consultant</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
